--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
 generatorOptions:
   disableNameSuffixHash: true
 
-configMapGenerator:
-- name: manager-config
-  files:
-  - controller_manager_config.yaml
+# configMapGenerator:
+# - name: manager-config
+#   files:
+#   - controller_manager_config.yaml
