--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: starboard-report-system
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: starboard-report-
+# namePrefix: starboard-report-
 
 # Labels to add to all resources and selectors.
 commonLabels:
