--- a/config/starboard-operator/static/04-starboard-operator.clusterrolebinding.yaml
+++ b/config/starboard-operator/static/04-starboard-operator.clusterrolebinding.yaml
@@ -10,4 +10,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: starboard-operator
-    namespace: starboard-report-system
+    namespace: dev
