--- a/config/starboard-operator/static/06-starboard-operator.deployment.yaml
+++ b/config/starboard-operator/static/06-starboard-operator.deployment.yaml
@@ -36,7 +36,7 @@ spec:
                 - ALL
           env:
             - name: OPERATOR_NAMESPACE
-              value: "dev"
+              value: "starboard-report-system"
             - name: OPERATOR_TARGET_NAMESPACES
               valueFrom:
                 configMapKeyRef:
