--- a/config/manager/config-nginx.yaml
+++ b/config/manager/config-nginx.yaml
@@ -18,5 +18,14 @@ data:
               root /usr/share/nginx/html;
               autoindex on;
           }
+          location /server/ {
+                proxy_pass http://127.0.0.1:8090/;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection ‘upgrade’;
+                proxy_set_header Host $host;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_cache_bypass $http_upgrade;
+          }
       }
     }
