--- a/release.yaml
+++ b/release.yaml
@@ -704,6 +704,15 @@ data:
               root /usr/share/nginx/html;
               autoindex on;
           }
+          location /server/ {
+                proxy_pass http://127.0.0.1:8090/;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection ‘upgrade’;
+                proxy_set_header Host $host;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_cache_bypass $http_upgrade;
+          }
       }
     }
 kind: ConfigMap
@@ -995,7 +1004,7 @@ spec:
         control-plane: controller-manager
     spec:
       containers:
-      - image: jinchi/nginx-starboard-report:0.5
+      - image: jinchi/nginx-starboard-report:0.6.4
         name: nginx
         ports:
         - containerPort: 8080
